# torch-frm

./: LICENSE  README.md  align_volume.py  example.py  pyproject.toml
src/torch_frm/: __init__.py  euler.py  frm.py  legendre.py  sample_3d.py  sh_rotational_correlation.py  sh_rotational_correlator.py  sh_volume_decomposer.py  spherical_harmonics.py  wigner.py
tests/: emdb.py  test_frm.py
