# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/
[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# https://peps.python.org/pep-0621/
[project]
name = "torch-frm"
dynamic = ["version"]
description = "Fast volumetric data alignment in torch"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Oier Lauzirika Zarrabeitia", email = "olauzirika@cnb.csic.es" }]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "torch"
]

# https://peps.python.org/pep-0735/
# setup with `uv sync` or `pip install -e . --group dev`
[dependency-groups]
test = ["pytest", "pytest-cov"]
dev = [
    { include-group = "test" },
    "ruff"
]

[tool.uv.sources]
torch-ctf = { workspace = true }

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 80
target-version = "py310"
src = ["src"]
fix = true

# https://docs.pytest.org/
[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--color=yes"]
testpaths = ["tests"]
filterwarnings = ["error"]

# https://coverage.readthedocs.io/
[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source = ["torch_frm"]
